[tool.poetry]
name = "blaise_ingest"
version = "0.1.0"
description = "A cloud function to ingest Blaise data"
authors = ["Sam Bryant <sam.bryant@armakuni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^2.5.0"
grpcio = "^1.59"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.3.4"
mypy = "^1.10.0"
codecov = "^2.1.13"
flask = "^2.0.0"
python-dotenv = "^0.18.0"
pytest-cov = "^5.0.0"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.1"}
google-cloud-logging = "^3.10.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"