[tool.poetry]
name = "blaise_ingest"
version = "0.1.0"
description = "A cloud function to ingest Blaise data"
authors = ["Blaise Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-storage = "^3.3.1"
protobuf = "^6.31.1"
grpcio = "^1.74.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.2"
mypy = "^1.17.1"
codecov = "^2.1.13"
flask = "^3.1.2"
python-dotenv = "^1.1.1"
pytest-cov = "^6.3.0"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
google-cloud-logging = "^3.12.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"